--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <!-- TODO: Remove before deploying to production! #whatcouldgowrong -->
     <meta name="robots" content="noindex, nofollow" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="user-scalable=no, width=device-width, initial-scale=1, viewport-fit=cover"
+    />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     %sveltekit.head%
   </head>
